# atividade_embarcados

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: mps2_an385.overlay
src/: aux.h  camera_thread.c  control_thread.c  display_thread.c  license_plate_validator.c  main.c  radar.h  radar_utils.c  sensor_thread.c  speed_calculator.c
tests/: CMakeLists.txt  test_speed_calculator.c
